examples/test/testpolicy17096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17096
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key17: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value27
          key28: value16
          key48: value1
      podSelector:
        matchLabels:
          key48: value23
          key5: value13
          key42: value39
